Tabs Carousel: Fixed overlapping issue in style 2 (fixes #4132)

--- a/src/plugins/tabs/tabs-mediumViewOver.scss
+++ b/src/plugins/tabs/tabs-mediumViewOver.scss
@@ -2,11 +2,17 @@
  * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
  * wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html
  */
+%carouselDrabBlueBackground-mediumViewOver {
+	background: $drabBlue;
+	background: transparentize($drabBlue, 0.1);
+}
 
-/**
- * Small view-friendly styles
- */
 .wb-tabs {
+	&.carousel-s1, &.carousel-s2 {
+		figcaption {
+			@extend %carouselDrabBlueBackground-mediumViewOver;
+		}
+	}
 	> {
 		details {
 			display: none;
